--- a/style.css
+++ b/style.css
@@ -77,13 +77,14 @@ body {
 
 .text-content {
   flex: 2;
-  min-width: 300px;
+  min-width: 85vw;
   padding: 25px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 15px;
   line-height: 1.6;
   font-size: 18px;
   height: auto; /* Changed from fixed height to auto for mobile */
+  width: auto
 }
 
 .social-links {
@@ -150,6 +151,7 @@ body {
   display: flex;
   gap: 20px;
   margin-bottom: 30px;
+  
 }
 
 .contact-button {
@@ -442,7 +444,7 @@ body {
     text-align: center;
     flex-direction: column;
     gap: 8px;
-    width: 145%;
+    width: 85vw;
   }
 
   .social-link i {
